--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "Kadir Goktas",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "release": "standard-version && git push origin master && git push --tags"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
     "eslint": "~3.9.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "standard-version": "^4.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
